= redmine_ics_export (redmics) change-log

== 1.3.dev

== 1.2.0
 * more redering options (issue 3, issue 5 and issue 9)
 * personal rendering options (issue 14)
 * declared encoding as UTF-8 (issue 10)

== 1.1.0

* enforcement of Redmine permissions in both anonymous and authenticated contexts (issue #6)
* russian and italian locale (issue #7 and #8)
* using METHOD:PUBLISH for better Outlook 2003 compatibility

== 1.0.2

* renaming to redmine_ics_export, please take care when updating
* standard locales defaulting to english
* french locale