@@ -1,6 +1,8 @@
 = redmine_ics_export (redmics) change-log
 
 == 1.3.dev
+ * Basque translation
+ * Brazilian Portuguese translation
 
 == 1.2.0
  * more redering options (issue 3, issue 5 and issue 9)
